Added shell for new game: Hunting the Manticore

--- a/Simple_CSharp_Games/Layout/NavMenu.razor
+++ b/Simple_CSharp_Games/Layout/NavMenu.razor
@@ -21,7 +21,14 @@
         </div>
         <div class="nav-item px-3 d-flex align-items-center">
             <NavLink class="nav-link" href="tictactoe">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tic Tac
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tic Tac Toe
+            </NavLink>
+        </div>
+        <div class="nav-item px-3 d-flex align-items-center">
+            <NavLink 
+                class="nav-link"
+                     href="manticore">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Hunting the Manticore
             </NavLink>
         </div>
     </nav>
