Hunting the manticore - game flow working with basic ui and button porgression - shot results rendring - game restarting

--- a/Simple_CSharp_Games/Games/ManticoreGame.razor
+++ b/Simple_CSharp_Games/Games/ManticoreGame.razor
@@ -34,7 +34,10 @@
 
             <div class="flex-row">
                 <p>Shots:</p>
-                <p>@gameState.Shots</p>
+                @foreach (var shot in @gameState.Shots)
+                {
+                    <p>@($"Range {shot.Guess} — was {shot.Result}!")</p>
+                }
             </div>
         }
         @if (showResult && !showManticoreAttack )
@@ -105,6 +108,7 @@
 
     private void Restart()
     {
+        guess = 0;
         showResult = false;
         showManticoreAttack = false;
         gameState.ResetGame();    
