--- a/Simple_CSharp_Games/Pages/ManticorePage.razor
+++ b/Simple_CSharp_Games/Pages/ManticorePage.razor
@@ -15,7 +15,7 @@
 				<p>	@GameDescription4 </p>
 				<button class="btn btn-primary" @onclick="ShowIntro">Play Game</button>
 			</div>
-			<img class="hero-section-image" src="/images/Manticore_Hero.png" />
+			<img class="hero-section-image" src="/images/manticore/hero_image.png" />
 		</div>
 	</div>
 }
@@ -28,7 +28,7 @@
 				<p>@SetupText2</p>
 				<p>@SetupText3</p>
 			</div>
-			<img class="intro-section-image" src="/images/Manticore_Intro.png" />
+			<img class="intro-section-image" src="/images/manticore/intro_image.png" />
 		</div>
 	</div>
 
