--- a/Simple_CSharp_Games/Pages/ManticorePage.razor.css
+++ b/Simple_CSharp_Games/Pages/ManticorePage.razor.css
@@ -60,7 +60,7 @@
 
 
 .intro-section-text p {
-    font-family: 'Cinzel', serif; /* or another sharp, fantasy serif */
+    font-family: 'Cinzel', serif; 
     font-size: 1.75rem;
     line-height: 1.6;
     letter-spacing: 0.05rem;
